-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The lnet configuration library does not support the configuration of numeric addresses (non IPv4 addresses). This was working fine in lustre 2.7 but does not work anymore since lustre 2.10.
This is problematic for the configuration of PTL4LND addresses. The GNILND case has already been treated in a specific (non-generic) fix through LU-10453.
Here is an example
# lnetctl net add --net ptlf --if 0
add:
- net:
errno: -1
descr: "bad parameter"
I am going to post a patch that fixes the issue.